--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,8 +1,16 @@
-.link {
+#links .link {
   color: gray;
   cursor: pointer;
+  
 }
-.link.active {
+
+#links li.link #signin,
+#links li.link #signup,
+#links li.link #reset {
+  margin-right: 0 !important;
+}
+
+#links .link.active {
   color: white;
   font-weight: bold;
   border-bottom: 2px solid #e53637;
@@ -24,7 +32,7 @@
 
 .link {
   list-style-type: none;
-  height: 38px;
+  /* height: 38px; */
   font-size: 1.25em;
 
   position: relative; /* 밑줄을 위한 기준 */
@@ -141,3 +149,8 @@
 .naver-login:hover {
   filter: brightness(0.93);
 }
+
+/* ul.list-unstyled li span:first-child {
+  font-weight: 600;
+  margin-right: 0;
+} */
