--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -8,23 +8,22 @@
     
 <div class="login-block container d-block">
   <!-- Heading -->
-  <h1 class="title text-center fw-bold mt-3">로그인</h1>
+  <h1 class="title text-center fw-bold mt-3" id="title">로그인</h1>
   
   <!-- Links -->
-  <ul class="links d-flex w-100 list-unstyled mr-4 my-4">
-    <li class="link d-inline text-center mr-5 active" id="loginTab">
-      <span id="signin"><strong>로그인</strong></span>
+  <ul class="links d-flex w-100 list-unstyled my-4" id="links">
+    <li class="link active me-3" id="loginTab">
+      <span id="signin">로그인</span>
     </li>
-    <li class="link d-inline text-center mr-4" id="registerTab">
-      <span id="signup"><strong>회원가입</strong></span>
+    <li class="link " id="registerTab">
+      <span id="signup" >회원가입</span>
     </li>
-    <li class="link d-inline ms-auto text-center ">
-      <span id="reset"><strong>초기화</strong></span>
+    <li class="link ms-auto">
+      <span id="reset">초기화</span>
     </li>
   </ul>
 
-  
-  <!-- Form display-none이 적용 안됨. 기존에 존재하던 css 파일이 덮어쓰는 확률 무시 못함 -->
+  <!-- 로그인 폼 -->
   <form  th:action="@{/user/login}" method="post" class="w-100 mx-auto d-flex flex-column" id="loginForm">
        <input type="text" placeholder="아이디 입력" class="form-control-lg mb-3" id="username" name="username"/>
        <input type="password" placeholder="비밀번호 입력" class="form-control-lg mb-3" id="password" name="password"/>
@@ -34,15 +33,15 @@
       로그인
     </button>
   </form >
-  <!-- 회원가입 -->
+  <!-- 회원가입 폼 -->
   <form  th:action="@{/user/register}" method="post" class="w-100 mx-auto d-flex flex-column d-none" id="registerForm">
        <!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> -->
-       <input type="text" placeholder="Repeat password" class="form-control-lg mb-3" name="name"/>
+       <input type="text" placeholder="이름 입력" class="form-control-lg mb-3" name="name"/>
        <input type="text" placeholder="아이디 입력" class="form-control-lg mb-3" id="id" name="id"/>
        <input type="password" placeholder="비밀번호 입력" class="form-control-lg mb-3" name="password"/>
     <!-- sign in button -->
     <button class="site-btn w-100 mt-1">
-      로그인
+      회원가입
     </button>
   </form >
   <!-- separator -->
