--- a/src/main/resources/templates/ott_contents/movieInfo.html
+++ b/src/main/resources/templates/ott_contents/movieInfo.html
@@ -71,7 +71,7 @@
             <div class="anime__details__content">
               <div class="row">
                 <div class="col-lg-3">
-                  <div class="anime__details__pic set-bg" style="background-image: url('/img/sample.png')">
+                  <div class="anime__details__pic set-bg" th:style="|background-image: url('/images/movieimages/${movieInfo.image.imgName}')|" loading="lazy">
                     <!-- <div class="comment"><i class="fa fa-comments"></i> 11</div>
                     <div class="view"><i class="fa fa-eye"></i> 9141</div> -->
                   </div>
