--- a/src/main/resources/templates/ott_contents/movieList.html
+++ b/src/main/resources/templates/ott_contents/movieList.html
@@ -34,13 +34,17 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-6" th:each="movie : ${movies}">
             <div class="product__item">
-              <div class="product__item__pic set-bg" style="background-image: url('/img/sample.png')">
-                <!-- <div class="ep">18 / 18</div> -->
-                <!-- 추후 평점위치 <div class="comment"><i class="fa fa-comments"></i> 11</div> -->
-                <!-- 추후 댓글갯수위치 <div class="view"><i class="fa fa-eye"></i> 9141</div> -->
-              </div>
+              <div
+                class="product__item__pic set-bg"
+                th:style="|background-image: url('/images/movieimages/${movie.image.imgName}')|"
+                loading="lazy"
+              ></div>
+              <!-- <div class="ep">18 / 18</div> -->
+              <!-- 추후 평점위치 <div class="comment"><i class="fa fa-comments"></i> 11</div> -->
+              <!-- 추후 댓글갯수위치 <div class="view"><i class="fa fa-eye"></i> 9141</div> -->
+
               <div class="product__item__text">
-                <ul>
+                <ul class="genre">
                   <!-- <li th:text="${movie.title}"></li> -->
                   <li th:text="${movie.genres}"></li>
                 </ul>
