--- a/src/main/resources/templates/uploads/upload.html
+++ b/src/main/resources/templates/uploads/upload.html
@@ -8,21 +8,19 @@
 <body>
     <h2>이미지 업로드</h2>
 
-    <form th:action="@{/images/image}" method="post" enctype="multipart/form-data">
-        <input type="file" name="file" accept="image/*" required>
+    <form method="post" enctype="multipart/form-data" th:action="@{/images/image}">
+        <input type="file" name="file" required />
         <button type="submit">업로드</button>
     </form>
 
-    <hr>
-
     <div th:if="${image != null}">
-        <h3>업로드된 이미지</h3>
+        <h3>업로드된 이미지:</h3>
+        <img th:src="@{/images/view/{file}(file=${image.path})}" alt="업로드된 이미지" style="max-width: 400px;">
         <p>파일명: <span th:text="${image.imgName}"></span></p>
-        <img th:src="@{/images/view/{filename}(filename=${image.path})}" style="max-width: 400px;">
     </div>
 
-    <div th:if="${error != null}" style="color:red;">
-        <p th:text="${error}"></p>
+    <div th:if="${error != null}">
+        <p style="color: red;" th:text="${error}"></p>
     </div>
 </body>
 
