--- a/src/main/resources/templates/ott_contents/gameInfo.html
+++ b/src/main/resources/templates/ott_contents/gameInfo.html
@@ -125,10 +125,13 @@
                         </div>
                       </div>
                     <!-- </div> -->
-                    <!-- <div class="anime__details__btn">
-                      <a href="#" class="follow-btn"><i class="fa fa-heart-o"></i> Follow</a>
-                      <a href="#" class="watch-btn"><span>Watch Now</span> <i class="fa fa-angle-right"></i></a>
-                    </div> -->
+                    <div class="anime__details__btn">
+                      <!-- 팔로우버튼 누르면 유저상세페이지에 해당 컨텐츠 띄워줌
+                        로그인한 상태에서만 보여짐 -->
+                      <button class="follow-btn follow" th:data-mid="${gameInfo.gid}">Follow</button>
+
+                      <!-- <a href="#" class="watch-btn"><span>Watch Now</span> <i class="fa fa-angle-right"></i></a> -->
+                    </div>
                   </div>
                 </div>
               </div>
@@ -260,6 +263,7 @@
       </script>
       <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
       <script th:src="@{/js/reply.js}"></script>
+      <script th:src="@{/js/followbtn.js}"></script>
     </div>
     <!-- layout:fragment="content" 닫기 -->
   </body>
