--- a/src/main/resources/templates/ott_contents/movieInfo.html
+++ b/src/main/resources/templates/ott_contents/movieInfo.html
@@ -136,7 +136,7 @@
                     <div class="anime__details__btn">
                       <!-- 팔로우버튼 누르면 유저상세페이지에 해당 컨텐츠 띄워줌
                         로그인한 상태에서만 보여짐 -->
-                      <button class="follow-btn follow"> Follow</button>
+                      <button class="follow-btn follow" th:data-mid="${movieInfo.mid}">Follow</button>
 
                       <!-- <a href="#" class="watch-btn"><span>Watch Now</span> <i class="fa fa-angle-right"></i></a> -->
                     </div>
