--- a/src/main/resources/templates/ott_contents/movieList.html
+++ b/src/main/resources/templates/ott_contents/movieList.html
@@ -32,20 +32,20 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 col-md-6 col-sm-6" th:each="movie : ${movies}">
+          <div class="col-lg-4 col-md-6 col-sm-6" th:each="movie : ${result.dtoList}">
             <div class="product__item">
-              <div
+              <!-- <div
                 class="product__item__pic set-bg"
                 th:style="|background-image: url('/images/movieimages/${movie.image.imgName}')|"
                 loading="lazy"
-              ></div>
+              ></div> -->
               <!-- <div class="ep">18 / 18</div> -->
               <!-- 추후 평점위치 <div class="comment"><i class="fa fa-comments"></i> 11</div> -->
               <!-- 추후 댓글갯수위치 <div class="view"><i class="fa fa-eye"></i> 9141</div> -->
 
               <div class="product__item__text">
                 <ul class="genre">
-                  <!-- <li th:text="${movie.title}"></li> -->
+                  <li th:text="${movie.nationNm}"></li>
                   <li th:text="${movie.genres}"></li>
                 </ul>
                 <h5>
