--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -36,12 +36,13 @@
         <div class="col-lg-2">
           <div class="header__right">
             <a href="#" class="search-switch"><span class="icon_search"></span></a>
-            <a href="./login.html"><span class="icon_profile"></span></a>
+            <a th:href="@{./user/login}"><span class="icon_profile"></span></a>
           </div>
         </div>
       </div>
       <div id="mobile-menu-wrap"></div>
     </div>
+
     <th:block layout:fragment="script">
       <!-- 여기에 스크립트 삽입 -->
     </th:block>
