--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -40,6 +40,8 @@
     <link rel="stylesheet" th:href="@{/css/plyr.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/nice-select.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css" />
+    <link rel="stylesheet" th:href="@{/css/elegant-icons.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/slicknav.min.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/reply.css}" type="text/css" />
