--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -12,10 +12,10 @@
   
   <!-- Links -->
   <ul class="links d-flex w-100 list-unstyled my-4" id="links">
-    <li class="link active me-3" id="loginTab">
+    <li class="link me-3" th:classappend="${securityUserDTO.name != null} ? '' : 'active'" id="loginTab">
       <span id="signin">로그인</span>
     </li>
-    <li class="link " id="registerTab">
+    <li class="link " th:classappend="${securityUserDTO.name == null} ? '' : 'active'" id="registerTab">
       <span id="signup" >회원가입</span>
     </li>
     <li class="link ms-auto">
@@ -24,7 +24,7 @@
   </ul>
 
   <!-- 로그인 폼 -->
-  <form  th:action="@{/user/login}" method="post" class="w-100 mx-auto d-flex flex-column" id="loginForm">
+  <form  th:action="@{/user/login}" method="post" class="w-100 mx-auto d-flex flex-column" th:classappend="${securityUserDTO.name != null} ? ' d-none' : ''" id="loginForm">
        <input type="text" placeholder="아이디 입력" class="form-control-lg mb-3" id="username" name="username"/>
        <input type="password" placeholder="비밀번호 입력" class="form-control-lg mb-3" id="password" name="password"/>
        
@@ -34,11 +34,14 @@
     </button>
   </form >
   <!-- 회원가입 폼 -->
-  <form  th:action="@{/user/register}" method="post" class="w-100 mx-auto d-flex flex-column d-none" id="registerForm">
+  <form  th:action="@{/user/register}" th:object="${securityUserDTO}" method="post" class="w-100 mx-auto d-flex flex-column" th:classappend="${securityUserDTO.name == null} ? ' d-none' : ''" id="registerForm">
        <!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> -->
-       <input type="text" placeholder="이름 입력" class="form-control-lg mb-3" name="name"/>
-       <input type="text" placeholder="아이디 입력" class="form-control-lg mb-3" id="id" name="id"/>
-       <input type="password" placeholder="비밀번호 입력" class="form-control-lg mb-3" name="password"/>
+       <input type="text" placeholder="이름 입력" class="form-control-lg mb-3" name="name" th:field="*{name}"/>
+       <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger"></div>
+       <input type="text" placeholder="아이디 입력" class="form-control-lg mb-3" id="id" name="id" th:field="*{id}"/>
+       <div th:if="${#fields.hasErrors('id')}" th:errors="*{id}" class="text-danger"></div>
+       <input type="password" placeholder="비밀번호 입력" class="form-control-lg mb-3" name="password" th:field="*{password}"/>
+       <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger"></div>
     <!-- sign in button -->
     <button class="site-btn w-100 mt-1">
       회원가입
@@ -69,6 +72,9 @@
     
     <th:block layout:fragment="script">
       <script th:src="@{/js/login.js}"></script>
+      <script th:if="${param.error}">
+    alert('아이디 또는 비밀번호가 잘못되었습니다.');
+  </script>
     </th:block>
   </main>
 </html>
