--- a/src/main/resources/templates/ott_contents/movieList.html
+++ b/src/main/resources/templates/ott_contents/movieList.html
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 col-md-6 col-sm-6" th:each="movie : ${result.dtoList}">
+          <div class="col-lg-4 col-md-6 col-sm-6" th:each="movie : ${movies}">
             <div class="product__item">
               <a th:href="@{/api/movies/read/{mid}(mid=${movie.mid})}">
                 <img
