리스트 댓글갯수표시

--- a/src/main/resources/templates/ott_contents/gameInfo.html
+++ b/src/main/resources/templates/ott_contents/gameInfo.html
@@ -55,7 +55,7 @@
                 <div class="col-lg-3">
                   <img
                     th:src="@{'/images/gameimages/' + ${gameInfo.image.imgName}}"
-                    onerror="this.onerror=null; this.src='/images/sample.png';"
+                    onerror="this.onerror=null; this.src='/images/sample.jpg';"
                     alt="게임 이미지"
                     loading="lazy"
                     class="anime__details__pic"
