--- a/src/main/resources/templates/ott_contents/gameList.html
+++ b/src/main/resources/templates/ott_contents/gameList.html
@@ -49,22 +49,29 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-6" th:each="game : ${games}">
             <div class="product__item">
-              <!-- <div class="product__item__pic set-bg" style="background-image: url('/img/sample.png')"> -->
-              <div>
-                <a th:href="@{/api/games/read/{gid}(gid=${game.gid})}">
-                  <img
-                    th:src="@{'/images/gameimages/' + ${game.image.imgName}}"
-                    onerror="this.onerror=null; this.src='/images/sample.png';"
-                    alt="게임 이미지"
-                    loading="lazy"
-                    class="product__item__pic"
-                /></a>
-                <!-- 할인율이 0이 아니면 '할인중' 표시 -->
-                <div class="discount-badge" th:if="${game.discountRate != 0}">SALE !!!</div>
-                <!-- <div class="ep">18 / 18</div> -->
-                <!-- 추후 평점위치 <div class="comment"><i class="fa fa-comments"></i> 11</div> -->
-                <!-- 추후 댓글갯수위치 <div class="view"><i class="fa fa-eye"></i> 9141</div> -->
+              <div class="product__item__pic">
+                <div>
+                  <a th:href="@{/api/games/read/{gid}(gid=${game.gid})}">
+                    <img
+                      th:src="@{'/images/gameimages/' + ${game.image.imgName}}"
+                      onerror="this.onerror=null; this.src='/images/sample.jpg';"
+                      alt="게임 이미지"
+                      loading="lazy"
+                      class="product__item__pic"
+                    />
+                    <!-- 팔로우수  -->
+                    <div class="comment_game">11</div>
+                    <!-- 댓글갯수  -->
+                    <div class="view_game" th:text="'Re: '+${game.replies.size} + 개"></div>
+                  </a>
+                  <!-- 할인율이 0이 아니면 '할인중' 표시 -->
+                  <div class="discount-badge" th:if="${game.discountRate != 0}">SALE !!!</div>
+                  <!-- <div class="ep">18 / 18</div> -->
+                  <!-- 추후 평점위치 <div class="comment"><i class="fa fa-comments"></i> 11</div> -->
+                  <!-- 추후 댓글갯수위치 <div class="view"><i class="fa fa-eye"></i> 9141</div> -->
+                </div>
               </div>
+
               <div class="product__item__text">
                 <ul>
                   <li th:text="${game.genres}"></li>
