--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -677,6 +677,15 @@ ol {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+
+  overflow: hidden;
+}
+
+.product__item__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 .product__item__pic .ep {
@@ -691,28 +700,60 @@ ol {
   top: 10px;
 }
 
-.product__item__pic .comment {
+/* 영화 팔로우 수 */
+.product__item__pic .comment_movie {
   font-size: 13px;
+  font-weight: bold;
   color: #ffffff;
-  background: #3d3d3d;
+  background: #c47124;
   display: inline-block;
   padding: 2px 10px;
   border-radius: 4px;
   position: absolute;
   left: 10px;
-  bottom: 10px;
+  bottom: 1px;
 }
 
-.product__item__pic .view {
+/* 게임 팔로우 수 */
+.product__item__pic .comment_game {
   font-size: 13px;
+  font-weight: bold;
   color: #ffffff;
-  background: #3d3d3d;
+  background: #c47124;
   display: inline-block;
   padding: 2px 10px;
   border-radius: 4px;
   position: absolute;
-  right: 10px;
-  bottom: 10px;
+  left: 10px;
+  bottom: 1px;
+}
+
+/* 영화댓글 수 */
+.product__item__pic .view_movie {
+  font-size: 13px;
+  font-weight: bold;
+  color: #ffffff;
+  background: #c47124;
+  display: inline-block;
+  padding: 2px 10px;
+  border-radius: 4px;
+  position: absolute;
+  left: 175px;
+  bottom: 1px;
+}
+
+/* 게임댓글 수 */
+.product__item__pic .view_game {
+  font-size: 13px;
+  font-weight: bold;
+  color: #ffffff;
+  background: #c47124;
+  display: inline-block;
+  padding: 2px 10px;
+  border-radius: 4px;
+  position: absolute;
+  left: 85%;
+  bottom: 1px;
 }
 
 .product__item__text {
