--- a/src/main/resources/templates/ott_contents/movieInfo.html
+++ b/src/main/resources/templates/ott_contents/movieInfo.html
@@ -73,7 +73,7 @@
                 <div class="col-lg-3">
                   <img
                     th:src="@{'/images/movieimages/' + ${movieInfo.image.imgName}}"
-                    onerror="this.onerror=null; this.src='/images/sample.png';"
+                    onerror="this.onerror=null; this.src='/images/sample.jpg';"
                     alt="영화 이미지"
                     loading="lazy"
                     class="anime__details__pic"
