--- a/src/main/resources/templates/uploads/upload.html
+++ b/src/main/resources/templates/uploads/upload.html
@@ -10,7 +10,7 @@
 
     <form method="post" enctype="multipart/form-data" th:action="@{/images/image}">
         <input type="file" name="file" required />
-        <button type="submit">업로드</button>
+        <button type="submit">이미지 업로드</button>
     </form>
 
     <div th:if="${image != null}">
